# Wonderland-Toy-Store

./: .gitignore  Dockerfile  PROMO_CODE_FEATURE.md  README.md  app.py  docker-compose.yml  init_db.py  migrate_db.py  pyproject.toml  requirements.txt  run.py  seed_data.py  start.sh  update_category.py  vercel.json
api/: index.py
app/: __init__.py  app.py  models.py  routes.py
app/static/css/: style.css
app/static/js/: script.js
app/templates/: about.html  admin_dashboard.html  admin_orders.html  admin_product_form.html  admin_products.html  admin_users.html  base.html  cart.html  category.html  checkout.html  contact.html  dashboard.html  forgot_password.html  index.html  login.html  orders.html  payment_card.html  products.html  refund_return_policy.html  register.html  reset_password.html  wishlist.html
app/templates/admin/: add_product.html  dashboard.html  edit_product.html  orders.html  products.html  users.html
instance/: store.db  store.db-journal  store.db-shm  store.db-wal
tests/: test_routes.py
